fix: icone de musica off

--- a/index.html
+++ b/index.html
@@ -52,18 +52,26 @@
 /* ================= MÚSICA ================= */
 document.addEventListener("click", function iniciarMusica() {
   const musica = document.getElementById("bg-music");
+  const btn = document.getElementById("music-btn");
+
   musica.volume = 0.5;
   musica.play();
+  btn.textContent = "🎵 MÚSICA";
+
   document.removeEventListener("click", iniciarMusica);
 });
 
 function toggleMusic() {
   const musica = document.getElementById("bg-music");
+  const btn = document.getElementById("music-btn");
+
   if (musica.paused) {
     musica.volume = 0.5;
     musica.play();
+    btn.textContent = "🎵 MÚSICA";
   } else {
     musica.pause();
+    btn.textContent = "🎵🚫 MÚSICA";
   }
 }
 
