--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NEM A PAU - Ultimate Online</title>
+<title>NEM A PATO - Ultimate Online</title>
 <link rel="icon" type="image/png" href="icone.png">
 <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
@@ -324,7 +324,7 @@ function render() {
   if (state.tela === "inicial") {
     playersDiv.style.display = "none";
     chatCont.style.display = "none";
-    box.innerHTML = `<div class="logo">NEM A PAU</div><input id="nInp" placeholder="SEU NOME"><button onclick="registrar()">ENTRAR</button>`;
+    box.innerHTML = `<div class="logo">NEM A PATO</div><input id="nInp" placeholder="SEU NOME"><button onclick="registrar()">ENTRAR</button>`;
     return;
   }
 
@@ -360,7 +360,7 @@ function render() {
         ${jVez.nome === state.meuNome ? `
           <input id="chInp" type="number" placeholder="Maior que ${state.valorAtual || 0}">
           <button onclick="enviarPalpite()">CHUTAR</button>
-          ${state.valorAtual ? `<button onclick="duvidar()" style="background:none; color:red; border-color:red; margin-top:10px;">NEM A PAU!</button>` : ""}
+          ${state.valorAtual ? `<button onclick="duvidar()" style="background:none; color:red; border-color:red; margin-top:10px;">NEM A PATO!</button>` : ""}
         ` : `<p>Aguardando ${jVez.nome} jogar...</p>`}
       </div>`;
   }
