--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
 
 <style>
-  body { margin: 0; padding: 0; background-image: url("NEMAPATO.png"); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;  color: #fff;  font-family: 'Courier New', monospace; display: flex; justify-content: center; align-items: center; height: 100vh; overflow: hidden; }
+  body { margin: 0; padding: 0; background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;  color: #fff;  font-family: 'Courier New', monospace; display: flex; justify-content: center; align-items: center; height: 100vh; overflow: hidden; }
   #players { position: absolute; top: 20px; right: 20px; border: 1px solid #fff; padding: 15px; text-align: right; font-size: 0.9em; min-width: 150px; z-index: 10; background: rgba(0,0,0,0.8); }
   #chat-container { position: absolute; bottom: 20px; left: 20px; width: 320px; height: 300px; border: 1px solid #fff; background: rgba(0,0,0,0.9); display: none; flex-direction: column; z-index: 100; }
   #chat-messages { flex-grow: 1; overflow-y: auto; padding: 10px; font-size: 0.85rem; text-align: left; }
@@ -35,6 +35,23 @@
 </style>
 </head>
 <body>
+
+<!-- TELA DE ABERTURA COM VÍDEO -->
+<div id="tela-abertura" style="
+  position:fixed;
+  inset:0;
+  background:#000;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index:5000;
+">
+
+  <video id="video-abertura" autoplay playsinline style="width:100%; height:100%; object-fit:cover;">
+    <source src="video_tela_abertura.mp4" type="video/mp4">
+  </video>
+
+</div>
 
 <div id="overlay-nome">
   <div class="center" style="border: 2px solid #fff; padding: 30px; background: #000;">
@@ -203,6 +220,30 @@ let state = {
   meuAvatar: null
 };
 
+function atualizarBackground() {
+
+  if (state.tela === "inicial") {
+    document.body.style.backgroundImage = "url('38oitava.jpg')";
+  }
+
+  else if (state.tela === "escolha-sala") {
+    document.body.style.backgroundImage = "url('38oitava.jpg')";
+  }
+
+  else if (state.tela === "espera") {
+    document.body.style.backgroundImage = "url('NEMAPATO.png')";
+  }
+
+  else if (state.tela === "jogo") {
+    document.body.style.backgroundImage = "url('PERGUNTASNEMAPATO.png')";
+  }
+
+  else if (state.tela === "ranking") {
+    document.body.style.backgroundImage = "url('RANKINGNEMAPATO.png')";
+  }
+}
+
+
 /* ================= LÓGICA DE SALAS E NOMES ================= */
 
 function tratarChat() {
@@ -351,6 +392,8 @@ function executarComandoAdmin(msg) {
 /* ================= RENDERIZAÇÃO ================= */
 
 function render() {
+  atualizarBackground();
+
   const app = document.getElementById("app");
   const playersDiv = document.getElementById("players");
   const chatCont = document.getElementById("chat-container");
@@ -732,6 +775,23 @@ function limparLocal() {
 
   render();
 }
+
+/* ================= TELA DE ABERTURA ================= */
+
+window.addEventListener("load", () => {
+  const video = document.getElementById("video-abertura");
+
+  video.onended = () => {
+    document.getElementById("tela-abertura").style.display = "none";
+  };
+
+  // Caso o autoplay seja bloqueado
+  video.play().catch(() => {
+    document.addEventListener("click", () => {
+      video.play();
+    }, { once: true });
+  });
+});
 
 </script>
 
